--- a/package.json
+++ b/package.json
@@ -9,6 +9,7 @@
     "preview": "vite preview"
   },
   "dependencies": {
+    "axios": "^1.8.3",
     "framer-motion": "^10.8.5",
     "react": "^18.2.0",
     "react-accessible-accordion": "^5.0.0",
@@ -17,6 +18,7 @@
     "react-icons": "^4.8.0",
     "react-outside-click-handler": "^1.3.0",
     "react-router-dom": "^7.3.0",
+    "react-toastify": "^11.0.5",
     "swiper": "^9.1.1"
   },
   "devDependencies": {
