--- a/package.json
+++ b/package.json
@@ -17,7 +17,8 @@
     "react-icons": "^4.8.0",
     "react-outside-click-handler": "^1.3.0",
     "react-router-dom": "^7.3.0",
-    "swiper": "^9.1.1"
+    "swiper": "^9.1.1",
+    "uuid": "^11.1.0"
   },
   "devDependencies": {
     "@types/react": "^18.0.28",
