--- a/package.json
+++ b/package.json
@@ -12,6 +12,7 @@
     "axios": "^1.8.3",
     "framer-motion": "^10.8.5",
     "lodash": "^4.17.21",
+    "lucide-react": "^0.483.0",
     "react": "^18.2.0",
     "react-accessible-accordion": "^5.0.0",
     "react-countup": "^6.4.2",
