--- a/package.json
+++ b/package.json
@@ -17,6 +17,7 @@
     "react-icons": "^4.8.0",
     "react-outside-click-handler": "^1.3.0",
     "react-router-dom": "^7.3.0",
+    "react-toastify": "^11.0.5",
     "swiper": "^9.1.1",
     "uuid": "^11.1.0"
   },
